# asnumpy

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  contributors.json  pyproject.toml  requirements.txt  setup.py
.gitcode/: PULL_REQUEST_TEMPLATE.md
asnumpy/: __init__.py  _types.py  array.py  cann.py  io.py  logic.py  math.py  nn.py  sorting.py  statistics.py  utils.py
asnumpy/lib/: __init__.py  __init__.pyi
asnumpy/linalg/: _linalg.py  direct.py
asnumpy/random/: _random.py
asnumpy/testing/: __init__.py  _array.py  _bundle.py  _loops.py
bindings/python/: CMakeLists.txt  bind_array.cpp  bind_cann.cpp  bind_dtypes.cpp  bind_fft.cpp  bind_linalg.cpp  bind_logic.cpp  bind_math.cpp  bind_nn.cpp  bind_random.cpp  bind_sorting.cpp  bind_statistics.cpp  bind_testing.cpp  bind_utils.cpp  bind_version.cpp  module.cpp
csrc/: CMakeLists.txt
csrc/array/: CMakeLists.txt  basic.cpp
csrc/cann/: CMakeLists.txt  driver.cpp
csrc/dtypes/: np_import.cpp  reg.cpp
csrc/linalg/: CMakeLists.txt  decompositions.cpp  norms.cpp  product.cpp  solving_inverting.cpp
csrc/logic/: CMakeLists.txt  logic.cpp
csrc/math/: CMakeLists.txt  arithmetic_operations.cpp  exponents_and_logarithms.cpp  extrema_finding.cpp  floating_point_routines.cpp  handling_complex_numbers.cpp  hyperbolic_functions.cpp  math.cpp  miscellaneous.cpp  other_special_functions.cpp  rational_routines.cpp  rounding.cpp  sums_products_differences.cpp  trigonometric_functions.cpp
csrc/nn/: CMakeLists.txt  activation.cpp
csrc/random/: CMakeLists.txt  distributions.cpp  random.cpp
csrc/sorting/: CMakeLists.txt  sorting.cpp
csrc/statistics/: CMakeLists.txt  averages_and_variances.cpp
csrc/utils/: CMakeLists.txt  acl_resource.cpp  npu_array.cpp  npu_scalar.cpp  status_handler.cpp
docs/: README.md  architecture.md  benchmarks.md  developer_guide.md  faq.md  quick_start.md
docs/logic/: logic.md
docs/math/: arithmetic_operations.md  exponents_and_logarithms.md  floating_point_routines.md  handling_complex_numbers.md  hyperbolic_functions.md  miscellaneous.md  other_special_functions.md  rational_routines.md  rounding.md  sums_products_differences.md  trigonometric_functions.md
docs/random/: distributions.md
examples/: 01_add.py  02_exp2.py  02_multiply.py  03_all.py  03_multiply.py  04_all.py  05_divide.py  06_vdot.py  07_full.py  08_linspace.py  09_mean.py  10_sort.py  README.md  divide.py  utils.py
include/: creation.hpp  math.hpp  utils.hpp
include/asnumpy/array/: basic.hpp
include/asnumpy/cann/: driver.hpp
include/asnumpy/constants/: constants.hpp
include/asnumpy/dtypes/: acl_float_reg.hpp  acl_int_reg.hpp  acl_manager_members.hpp  acl_reg_common.hpp  desc.hpp  float_types.hpp  int_types.hpp  np_import.hpp
include/asnumpy/linalg/: decompositions.hpp  norms.hpp  product.hpp  solving_inverting.hpp
include/asnumpy/logic/: logic.hpp
include/asnumpy/math/: arithmetic_operations.hpp  exponents_and_logarithms.hpp  extrema_finding.hpp  floating_point_routines.hpp  handling_complex_numbers.hpp  hyperbolic_functions.hpp  math.hpp  miscellaneous.hpp  other_special_functions.hpp  rational_routines.hpp  rounding.hpp  sums_products_differences.hpp  trigonometric_functions.hpp
include/asnumpy/nn/: activation.hpp  nn.hpp
include/asnumpy/random/: distributions.hpp  random.hpp
include/asnumpy/sorting/: sorting.hpp
include/asnumpy/statistics/: averages_and_variances.hpp  statistics.hpp
include/asnumpy/utils/: acl_executor.hpp  acl_resource.hpp  npu_array.hpp  npu_ops_macros.hpp  npu_scalar.hpp  status_handler.hpp
python/: CMakeLists.txt  asnumpy.cpp  bind_array.cpp  bind_cann.cpp  bind_dtypes.cpp  bind_fft.cpp  bind_linalg.cpp  bind_logic.cpp  bind_math.cpp  bind_random.cpp  bind_sorting.cpp  bind_testing.cpp  bind_utils.cpp  bind_version.cpp
src/: CMakeLists.txt  creation.cpp  math.cpp  module.cpp
src/array/: CMakeLists.txt  basic.cpp
src/asnumpy/: __init__.py  _types.py  array.py  cann.py  io.py  logic.py  math.py  nn.py  sorting.py  statistics.py  utils.py
src/asnumpy/linalg/: _linalg.py  direct.py
src/asnumpy/random/: _random.py
src/asnumpy/testing/: __init__.py  _array.py  _assertions.py  _bundle.py  _helper.py  _loops.py  _parameterized.py  _pytest_impl.py
src/cann/: CMakeLists.txt  driver.cpp
src/dtypes/: CMakeLists.txt  np_import.cpp  reg.cpp
src/linalg/: CMakeLists.txt  decompositions.cpp  norms.cpp  product.cpp  solving_inverting.cpp
src/logic/: CMakeLists.txt  logic.cpp
src/math/: CMakeLists.txt  arithmetic_operations.cpp  exponents_and_logarithms.cpp  extrema_finding.cpp  floating_point_routines.cpp  handling_complex_numbers.cpp  hyperbolic_functions.cpp  math.cpp  miscellaneous.cpp  other_special_functions.cpp  rational_routines.cpp  rounding.cpp  sums_products_differences.cpp  trigonometric_functions.cpp
src/nn/: activation.cpp
src/random/: CMakeLists.txt  distributions.cpp  random.cpp
src/sorting/: CMakeLists.txt  sorting.cpp
src/statistics/: averages_and_variances.cpp
src/utils/: CMakeLists.txt  acl_resource.cpp  npu_array.cpp  npu_scalar.cpp  status_handler.cpp
test/: allpass_test_script.py  core.py  main.py  random_test_script.py  script_test_cases.py  test_broadcast_shape.py  test_script.py
test/test_creation/: test_acl_ones.py  test_arange.py  test_create_scalar.py  test_empty.py  test_eye.py  test_full.py  test_obj2dtype.py  test_ones.py  test_zeros.py
test/test_dtypes/: test_dtypes.py  test_float_types.py
test/test_math/: test_abs_sign_heaviside.py  test_data.py  test_functions.py  test_script.py
tests/: conftest.py
tests/asnumpy_tests/compat_tests/: test_constants_dtype.py  test_drop_in.py  test_fallback.py
tests/asnumpy_tests/creation_tests/: test_array.py  test_asarray.py  test_basic.py  test_copy.py  test_creation.py
tests/asnumpy_tests/io_tests/: test_io.py
tests/asnumpy_tests/linalg_test/: test_decompositions.py  test_norms.py  test_product.py  test_solving_inverting.py
tests/asnumpy_tests/linalg_tests/: test_decompositions.py  test_norms.py  (+2 more)
(+24 files in other folders)
