# *****************************************************************************
# Copyright [2024]-[2025] [CANN/asnumpy] Authors. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# *****************************************************************************

[build-system]
requires = [
  "setuptools>=61",
  "wheel",
  "build",
  "numpy>=1.26",
  "cmake>=3.22",
  "ninja",
]
build-backend = "setuptools.build_meta"

[project]
name = "asnumpy"
dynamic = ["version"]
description = "A NumPy-like library accelerated by Ascend NPU"
readme = "README.md"
authors = [{ name = "神里绫华的狗", email = "wuzhenqing@stu.hit.edu.cn" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux"
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.0"
]

[tool.setuptools]
packages = ["asnumpy", "asnumpy.lib"]

[tool.setuptools.dynamic]
version = { attr = "asnumpy.__version__" }